# echo_notes

./: .env.example  .gitignore  .project-metadata.yaml  README.md  amp_start.py  echo_notes_app.py  pyproject.toml  start_app.sh
src/echo_notes/api/: llm_client.py  whisper_client.py
src/echo_notes/config/: settings.py
src/echo_notes/core/: audio.py  recorder.py  smart_chunker.py  transcription.py
src/echo_notes/ui/: services.py  streamlit_app.py
src/echo_notes/ui/pages/: browse.py  chat.py  record.py  transcribe.py
tests/: test_api.py  test_file_management.py
